<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:text="@string/template_room_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/template_area"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/room_name"
        app:layout_constraintTop_toBottomOf="@+id/room_name" />

    <TextView
        android:id="@+id/persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/template_persons"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/room_area"
        app:layout_constraintTop_toTopOf="@+id/room_area" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/template_price"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/stars"
        app:layout_constraintTop_toTopOf="@+id/room_area" />

    <TextView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:text="@string/template_stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/room_name" />

    <TextView
        android:id="@+id/room_id"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginEnd="12dp"
        android:text="@string/template_room_id"
        app:layout_constraintEnd_toStartOf="@+id/stars"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/room_name"
        app:layout_constraintTop_toTopOf="@+id/stars" />
</androidx.constraintlayout.widget.ConstraintLayout>