<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.listRoomsOrBookings.ListRoomOrBookingFragment">


    <Button
        android:id="@+id/buttonFetchMyRoom"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginTop="196dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:enabled="false"
        android:text="@string/fetch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewID"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textViewID"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="196dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toEndOf="@+id/textViewListWithID"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewListWithID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/listWithID"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonFetchMyRoom" />


    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/template_room_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewID" />

    <TextView
        android:id="@+id/room_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/template_area"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/room_name"
        app:layout_constraintTop_toBottomOf="@+id/room_name" />

    <TextView
        android:id="@+id/persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/template_persons"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/room_area"
        app:layout_constraintTop_toTopOf="@+id/room_area" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/template_price"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/stars"
        app:layout_constraintTop_toTopOf="@+id/room_area" />

    <TextView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/template_stars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/room_name" />

    <TextView
        android:id="@+id/spans"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/template_spans"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>