<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.defineDates.DefineDatesFragment">

    <EditText
        android:id="@+id/editTextDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yyyy_mm_dd"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRoomID" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/define_dates"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelRoomId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:text="@string/room_id"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextRoomID"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRoomID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/yyyy_mm_dd"
        android:inputType="date"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateFrom" />

    <TextView
        android:id="@+id/labelDateTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="52dp"
        android:text="@string/date_to"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDateTo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDateFrom" />

    <TextView
        android:id="@+id/labelDateFrom"
        android:layout_width="78dp"
        android:layout_height="21dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:text="@string/date_from"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextDateFrom"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelRoomId" />

    <Button
        android:id="@+id/buttonDefineDates"
        android:layout_width="118dp"
        android:layout_height="58dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateTo"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>